// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer component Localization should render en-hk 1`] = `
<footer
  className="container"
>
  <div
    className="wrapper"
  >
    <div
      className="pullRight"
    >
      <FooterLinks
        messages={
          Object {
            "footer.copyright": "Copyright © 1998-{year}, jobsDB.",
            "footer.legalLink": "https://m.jobsdb.com/en-hk/legal.do",
            "footer.legalLinkText": "Legal terms",
            "footer.privacyLink": "https://hk.jobsdb.com/en-hk/pages/terms/privacy-policy",
            "footer.privacyLinkText": "Privacy Statement",
            "footer.rightReserved": "All Rights Reserved.",
            "footer.siteMapLink": "https://hk.jobsdb.com/hk/en/sitemap",
            "footer.siteMapLinkText": "Site Map",
            "footer.termsLink": "https://hk.jobsdb.com/en-hk/pages/terms/terms-conditions",
            "footer.termsLinkText": "Terms & Conditions",
          }
        }
      />
    </div>
    <div
      className="pullLeft"
    >
      <p
        className="copyright"
      >
        Copyright © 1998-2017, jobsDB.
        <span
          className="fullversion"
        >
          All Rights Reserved.
        </span>
      </p>
    </div>
  </div>
</footer>
`;

exports[`Footer component Localization should render en-id 1`] = `
<footer
  className="container"
>
  <div
    className="wrapper"
  >
    <div
      className="pullRight"
    >
      <FooterLinks
        messages={
          Object {
            "footer.copyright": "Copyright © 1998-{year}, jobsDB.",
            "footer.legalLink": "https://m.jobsdb.co.id/en-id/legal.do",
            "footer.legalLinkText": "Legal terms",
            "footer.privacyLink": "https://id.jobsdb.com/en-id/pages/terms/privacy-policy",
            "footer.privacyLinkText": "Privacy Statement",
            "footer.rightReserved": "All Rights Reserved.",
            "footer.siteMapLink": "https://id.jobsdb.com/id/en/sitemap",
            "footer.siteMapLinkText": "Site Map",
            "footer.termsLink": "https://id.jobsdb.com/en-id/pages/terms/terms-conditions",
            "footer.termsLinkText": "Terms & Conditions",
          }
        }
      />
    </div>
    <div
      className="pullLeft"
    >
      <p
        className="copyright"
      >
        Copyright © 1998-2017, jobsDB.
        <span
          className="fullversion"
        >
          All Rights Reserved.
        </span>
      </p>
    </div>
  </div>
</footer>
`;

exports[`Footer component Localization should render en-sg 1`] = `
<footer
  className="container"
>
  <div
    className="wrapper"
  >
    <div
      className="pullRight"
    >
      <FooterLinks
        messages={
          Object {
            "footer.copyright": "Copyright © 1998-{year}, jobsDB.",
            "footer.legalLink": "https://m.jobsdb.com/en-sg/legal.do",
            "footer.legalLinkText": "Legal terms",
            "footer.privacyLink": "https://sg.jobsdb.com/en-sg/pages/terms/privacy-policy",
            "footer.privacyLinkText": "Privacy Statement",
            "footer.rightReserved": "All Rights Reserved.",
            "footer.siteMapLink": "https://sg.jobsdb.com/sg/en/sitemap",
            "footer.siteMapLinkText": "Site Map",
            "footer.termsLink": "https://sg.jobsdb.com/en-sg/pages/terms/terms-conditions",
            "footer.termsLinkText": "Terms & Conditions",
          }
        }
      />
    </div>
    <div
      className="pullLeft"
    >
      <p
        className="copyright"
      >
        Copyright © 1998-2017, jobsDB.
        <span
          className="fullversion"
        >
          All Rights Reserved.
        </span>
      </p>
    </div>
  </div>
</footer>
`;

exports[`Footer component Localization should render en-th 1`] = `
<footer
  className="container"
>
  <div
    className="wrapper"
  >
    <div
      className="pullRight"
    >
      <FooterLinks
        messages={
          Object {
            "footer.copyright": "Copyright © 1998-{year}, jobsDB.",
            "footer.legalLink": "https://m.jobsdb.co.th/en-th/legal.do",
            "footer.legalLinkText": "Legal terms",
            "footer.privacyLink": "https://th.jobsdb.com/en-th/pages/terms/privacy-policy",
            "footer.privacyLinkText": "Privacy Statement",
            "footer.rightReserved": "All Rights Reserved.",
            "footer.siteMapLink": "https://th.jobsdb.com/th/en/sitemap",
            "footer.siteMapLinkText": "Site Map",
            "footer.termsLink": "https://th.jobsdb.com/en-th/pages/terms/terms-conditions",
            "footer.termsLinkText": "Terms & Conditions",
          }
        }
      />
    </div>
    <div
      className="pullLeft"
    >
      <p
        className="copyright"
      >
        Copyright © 1998-2017, jobsDB.
        <span
          className="fullversion"
        >
          All Rights Reserved.
        </span>
      </p>
    </div>
  </div>
</footer>
`;

exports[`Footer component Localization should render id-id 1`] = `
<footer
  className="container"
>
  <div
    className="wrapper"
  >
    <div
      className="pullRight"
    >
      <FooterLinks
        messages={
          Object {
            "footer.copyright": "Hak Cipta© 1998-{year}, jobsDB.",
            "footer.legalLink": "https://m.jobsdb.co.id/en-id/legal.do",
            "footer.legalLinkText": "Syarat Hukum",
            "footer.privacyLink": "https://id.jobsdb.com/id-id/pages/terms/privacy-policy",
            "footer.privacyLinkText": "Pernyataan Privasi",
            "footer.rightReserved": "Semua Hak Dilindungi.",
            "footer.siteMapLink": "https://id.jobsdb.com/id/id/sitemap",
            "footer.siteMapLinkText": "Sitemap",
            "footer.termsLink": "https://id.jobsdb.com/id-id/pages/terms/terms-conditions",
            "footer.termsLinkText": "Syarat dan ketentuan",
          }
        }
      />
    </div>
    <div
      className="pullLeft"
    >
      <p
        className="copyright"
      >
        Hak Cipta© 1998-2017, jobsDB.
        <span
          className="fullversion"
        >
          Semua Hak Dilindungi.
        </span>
      </p>
    </div>
  </div>
</footer>
`;

exports[`Footer component Localization should render th-th 1`] = `
<footer
  className="container"
>
  <div
    className="wrapper"
  >
    <div
      className="pullRight"
    >
      <FooterLinks
        messages={
          Object {
            "footer.copyright": "สงวนลิขสิทธิ์ 1998-{year} jobsDB",
            "footer.legalLink": "https://m.jobsdb.co.th/en-th/legal.do",
            "footer.legalLinkText": "ข้อกำหนดทางกฎหมาย",
            "footer.privacyLink": "https://th.jobsdb.com/th-th/pages/terms/privacy-policy",
            "footer.privacyLinkText": "คำชี้แจงสิทธิส่วนบุคคล",
            "footer.rightReserved": "",
            "footer.siteMapLink": "https://th.jobsdb.com/th/th/sitemap",
            "footer.siteMapLinkText": "แผนที่เว็บไซต์",
            "footer.termsLink": "https://th.jobsdb.com/th-th/pages/terms/terms-conditions",
            "footer.termsLinkText": "ข้อกำหนดและเงื่อนไข",
          }
        }
      />
    </div>
    <div
      className="pullLeft"
    >
      <p
        className="copyright"
      >
        สงวนลิขสิทธิ์ 1998-2017 jobsDB
        <span
          className="fullversion"
        />
      </p>
    </div>
  </div>
</footer>
`;
